# AndroidJniRender

./: .gitignore  build.gradle  local.properties  log.md  log2.md  settings.gradle
app/: build.gradle  sequenceDiagram.md
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: modelTextured.fsh  modelTextured.vsh
app/src/main/assets/snowland/: snowland.mtl
app/src/main/assets/yin/: yin.mtl
app/src/main/cpp/jniCalls/: assimpActivity.cpp  gestureClass.cpp  myGLRenderer.cpp
app/src/main/cpp/nativeCode/camera/: GLCamera.cpp  GLCamera.h
app/src/main/cpp/nativeCode/gl/: GLManager.cpp  GLManager.h  myGLM.h
app/src/main/cpp/nativeCode/modelLoader/: AssimpLoader.cpp  AssimpLoader.h  AssimpPinkFoxModel.cpp  AssimpPinkFoxModel.h  AssimpShenHeModel.cpp  AssimpShenHeModel.h  AssimpYinModel.cpp  AssimpYinModel.h  assimpLoader.cpp  assimpLoader.h  assimpPinkFoxModel.cpp  modelAssimp.cpp  modelAssimp.h
app/src/main/cpp/nativeCode/shader/: shaderLoader.cpp  shaderLoader.h
app/src/main/cpp/nativeCode/utils/: assetManager.cpp  assetManager.h  fileUtils.cpp  fileUtils.h  logUtils.h  uniquePtrUtils.h
app/src/main/java/com/anandmuralidhar/assimpandroid/: AssimpActivity.kt  GestureClass.kt  MyGLRenderer.kt  MyGLSurfaceView.kt  MyGLTextureView.kt
app/src/main/java/com/anandmuralidhar/gltextureview/: GLTextureView.java  SystemProperties.java
app/src/main/res/layout/: assimp_layout.xml
app/src/main/res/values/: strings.xml
app/src/main/thirdpartCpp/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
